made the nav bar responsive to avoid going offcanvas on mobile

--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -2,3 +2,10 @@
     color: aquamarine !important;
 
 }
+
+@media screen and (max-width: 500px) {
+    .navbar-brand {
+        display: none;
+    }
+    
+}
